--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,5 @@ npm-debug.log*
 # If we decide to use a dedicated folder for web-optimized videos, we should ignore the originals.
 # This keeps the repo lean by focusing only on the code.
 # The `media/source_videos/` folder you mentioned could be ignored entirely if the raw files are huge.
-media/source_videos/
-media/source_videos/
+# media/source_videos/
 # (If we decide to keep the videos in the repo, just delete the line above.)
